message z-index issue

--- a/app/style/app-style.css
+++ b/app/style/app-style.css
@@ -833,7 +833,7 @@ a:not([href]):hover {
     font-size: 20px;
     font-weight: 500;
     overflow-wrap: anywhere;
-    z-index: 5;
+    z-index: 21;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
 
